--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,6 @@ jobs:
       with:
         python-version: '3.11'
         
-    - name: Stash any local changes
-      run: git stash
-      
     - name: Install dependencies
       run: cd scripts && pip install -r requirements.txt
       
@@ -31,20 +28,15 @@ jobs:
     - name: Run Config script and save output to file
       run: cd scripts && python app.py
       
-
-    - name: Check changes
+    - name: Check for local changes
       run: |
-        echo "Checking the changes made..."
+        echo "Checking for local changes..."
         git status
-        ls -l scripts/
         
-    - name: Commit and push files
-      uses: EndBug/add-and-commit@v7
-      with:
-        author_name: "Github Actions"
-        author_email: "actions@github.com"
-        message: "Updated scripts and files every 5 minutes ⚡️"
-        add: "."
-        push: "https://github.com/TalesOrigin/configuration.git"
+    - name: Commit and push changes
+      run: |
+        git add .
+        git commit -m "Updated scripts and files every 5 minutes ⚡️" || echo "No changes to commit"
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
